"rwvid and classification"

--- a/prob1_2025/condl.html
+++ b/prob1_2025/condl.html
@@ -258,7 +258,7 @@ In both these facts we have expressed unconditional probabilities in terms of co
 The following two exercises have simple solutions, but are conceptually very important. 
 <p></p>
 ::<p>
-<b>EXERCISE 1:</b>&nbsp;
+<b>EXERCISE 1:</b>&nbsp;(Easy)
 Let $(X,Y)$  be discrete with $X$  having support $\{x_1,x_2,...,x_m\}$  and $Y$  having support
 $\{y_1,y_2,...,y_n\}$.
 <p></p>
@@ -277,7 +277,7 @@ What may not be readily obvious is that the converse of the exercise is also tru
  the following exercise.
 <p></p>
 ::<p>
-<b>EXERCISE 2:</b>&nbsp;Let $(X,Y)$  be as in the last exercise. For $B\subseteq{\mathbb R}$, let  $g(x_i, B)$  be such
+<b>EXERCISE 2:</b>&nbsp;(Easy) Let $(X,Y)$  be as in the last exercise. For $B\subseteq{\mathbb R}$, let  $g(x_i, B)$  be such
  that for every $A\subseteq {\mathbb R}$  we have 
 $$P(X\in A,\, Y\in B) = E\big(g(X, B)\ind_{\{X\in A\}}\big).$$
 Then show that we must have $g(x_i, B) = P(Y\in B|X=x_i)$  for $B\subseteq{\mathbb R}$  and $i=1,...,m$.
@@ -487,7 +487,7 @@ name="Problems for practice">Problems for practice</a></h1>
 
 <p></p>
 ::<p>
-<b>EXERCISE 3:</b>&nbsp;<font size="-2">[condist1.png]</font><img width="" src="image/condist1.png" style="vertical-align:text-top;">
+<b>EXERCISE 3:</b>&nbsp;(Easy) <font size="-2">[condist1.png]</font><img width="" src="image/condist1.png" style="vertical-align:text-top;">
 <p></p>
 Here the word "density" is used to mean "PMF". 
 <p><a
@@ -502,13 +502,12 @@ $f_{Y|X}(y|x) = P(Y=y|X=x),$  the given equality is just theorem of total probab
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 4:</b>&nbsp;<font size="-2">[condist2.png]</font><img width="" src="image/condist2.png" style="vertical-align:text-top;">
+<b>EXERCISE 4:</b>&nbsp;(Medium) <font size="-2">[condist2.png]</font><img width="" src="image/condist2.png" style="vertical-align:text-top;">
 <p><a
 href="javascript:hideShow('lab4')"><b>[Hint]</b></a><div
 class="ans" id="lab4">
 $E(S_N) = E(E(S_N|N)) = E(N\mu) = \mu E(N).$
-<p></p>
-E(S_N^2) = E(E(S_N^2|N)) = E(N\sigma^2 + N^2\mu^2  ) = \sigma^2E(N^2)+\mu^2E(N^2).
+$$E(S_N^2) = E(E(S_N^2|N)) = E(N\sigma^2 + N^2\mu^2  ) = \sigma^2E(N^2)+\mu^2E(N^2).$$
 <p></p>
 The third equality follows directly from these two.
 </div></p>
@@ -516,7 +515,7 @@ The third equality follows directly from these two.
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 5:</b>&nbsp;<font size="-2">[condist3.png]</font><img width="" src="image/condist3.png" style="vertical-align:text-top;">
+<b>EXERCISE 5:</b>&nbsp;(Easy) <font size="-2">[condist3.png]</font><img width="" src="image/condist3.png" style="vertical-align:text-top;">
 <p><a
 href="javascript:hideShow('lab5')"><b>[Hint]</b></a><div
 class="ans" id="lab5">
@@ -530,7 +529,7 @@ class="ans" id="lab5">
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 6:</b>&nbsp;<font size="-2">[condist4.png]</font><img width="" src="image/condist4.png" style="vertical-align:text-top;">
+<b>EXERCISE 6:</b>&nbsp;(Medium) <font size="-2">[condist4.png]</font><img width="" src="image/condist4.png" style="vertical-align:text-top;">
 <p></p>
 You might like to solve (b) first.
 <p><a
@@ -550,7 +549,7 @@ So $P(X\geq Y) = \frac{1}{N+1}+\frac{N}{2(N+1)} = \frac{N+2}{2(N+1)}.$
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 7:</b>&nbsp;<font size="-2">[condist5.png]</font><img width="" src="image/condist5.png" style="vertical-align:text-top;">
+<b>EXERCISE 7:</b>&nbsp;(Medium) <font size="-2">[condist5.png]</font><img width="" src="image/condist5.png" style="vertical-align:text-top;">
 <p></p>
 Here Exercise 14 means the last exercise.
 <hr>
@@ -599,7 +598,7 @@ Hence $P(R=k) = \frac{2(N-k+1)}{(N+1)^2}.$
 
 </p>
 ::<p>
-<b>EXERCISE 8:</b>&nbsp;<font size="-2">[condist6.png]</font><img width="" src="image/condist6.png" style="vertical-align:text-top;">
+<b>EXERCISE 8:</b>&nbsp;(Easy) <font size="-2">[condist6.png]</font><img width="" src="image/condist6.png" style="vertical-align:text-top;">
 <p><a
 href="javascript:hideShow('lab8')"><b>[Hint]</b></a><div
 class="ans" id="lab8">
@@ -619,7 +618,7 @@ Then $P(X=x)P(Y=y) = \big[\sum_y h(y) \big]g(x)\big[\sum_x g(x) \big]h(y) = g(x)
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 9:</b>&nbsp;<font size="-2">[condist7.png]</font><img width="" src="image/condist7.png" style="vertical-align:text-top;">
+<b>EXERCISE 9:</b>&nbsp;(Easy) <font size="-2">[condist7.png]</font><img width="" src="image/condist7.png" style="vertical-align:text-top;">
 Here "density" means "PMF". 
 <p><a
 href="javascript:hideShow('lab9')"><b>[Hint]</b></a><div
@@ -662,7 +661,7 @@ Hence $P(B) = \frac{|B|}{|\Omega|} = \frac{(2r)!}{(2r^2)^r}$.
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 10:</b>&nbsp;<font size="-2">[condist8.png]</font><img width="" src="image/condist8.png" style="vertical-align:text-top;">
+<b>EXERCISE 10:</b>&nbsp;(Medium) <font size="-2">[condist8.png]</font><img width="" src="image/condist8.png" style="vertical-align:text-top;">
 <p><a
 href="javascript:hideShow('lab10')"><b>[Hint]</b></a><div
 class="ans" id="lab10">
@@ -681,7 +680,7 @@ P(X_2=y|X_1+X_2 = z)
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 11:</b>&nbsp;<font size="-2">[condist9.png]</font><img width="" src="image/condist9.png" style="vertical-align:text-top;">
+<b>EXERCISE 11:</b>&nbsp;(Easy) <font size="-2">[condist9.png]</font><img width="" src="image/condist9.png" style="vertical-align:text-top;">
 <p><a
 href="javascript:hideShow('lab11')"><b>[Hint]</b></a><div
 class="ans" id="lab11">
@@ -697,7 +696,7 @@ Direct computation shows $n\geq 4.$
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 12:</b>&nbsp;<font size="-2">[condist10.png]</font><img width="" src="image/condist10.png" style="vertical-align:text-top;">
+<b>EXERCISE 12:</b>&nbsp;(Medium) <font size="-2">[condist10.png]</font><img width="" src="image/condist10.png" style="vertical-align:text-top;">
 <p></p>
 Imagine this set up: A coin with $P(H)=p$  is repeadly tossed. Success means $H.$
 <p><a
@@ -713,7 +712,7 @@ Thanks to Amit Prakash Jena for correcting a mistake here.
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 13:</b>&nbsp;<font size="-2">[condist11.png]</font><img width="" src="image/condist11.png" style="vertical-align:text-top;">
+<b>EXERCISE 13:</b>&nbsp;(Medium) <font size="-2">[condist11.png]</font><img width="" src="image/condist11.png" style="vertical-align:text-top;">
 <p></p>
 This is a continuation of the last problem.
 <p><a
@@ -725,7 +724,7 @@ $P(T_1=x|N_n=1) = \frac{P(T_1=x\&amp; N_n=1)}{P(N_n=1)} = \frac{p(1-p)^{n-1}}{np
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 14:</b>&nbsp;<font size="-2">[condist12.png]</font><img width="" src="image/condist12.png" style="vertical-align:text-top;">
+<b>EXERCISE 14:</b>&nbsp;(Hard) <font size="-2">[condist12.png]</font><img width="" src="image/condist12.png" style="vertical-align:text-top;">
 <p></p>
 This is a continuation of the last problem.
 <p><a
@@ -736,7 +735,7 @@ Same logic as in the last solution.
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 15:</b>&nbsp;<font size="-2">[morecond1.png]</font><img width="" src="image/morecond1.png" style="vertical-align:text-top;">
+<b>EXERCISE 15:</b>&nbsp;(Hard) <font size="-2">[morecond1.png]</font><img width="" src="image/morecond1.png" style="vertical-align:text-top;">
 <p><a
 href="javascript:hideShow('lab15')"><b>[Hint]</b></a><div
 class="ans" id="lab15">
@@ -746,7 +745,7 @@ By symmetry, the answer is $\frac 1n$  if $k=1.$  So, for general $k$  the answe
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 16:</b>&nbsp;<font size="-2">[morecond2.png]</font><img width="" src="image/morecond2.png" style="vertical-align:text-top;">
+<b>EXERCISE 16:</b>&nbsp;(Hard) <font size="-2">[morecond2.png]</font><img width="" src="image/morecond2.png" style="vertical-align:text-top;">
 Here you should use the fact that for continuous joint distribition $P(X_i=X_j)=0$  for $i\neq j$. Thus, you may
  assume that all the $X_j$'s are distinct. 
 <p><a
@@ -767,7 +766,7 @@ Similarly for $P(I_jI_k=1).$
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 17:</b>&nbsp;<font size="-2">[morecond3.png]</font><img width="" src="image/morecond3.png" style="vertical-align:text-top;">
+<b>EXERCISE 17:</b>&nbsp;(Medium) <font size="-2">[morecond3.png]</font><img width="" src="image/morecond3.png" style="vertical-align:text-top;">
 <p><a
 href="javascript:hideShow('lab17')"><b>[Hint]</b></a><div
 class="ans" id="lab17">The problem is basically optimising $\sum P_i^2$ subject
@@ -776,7 +775,7 @@ to $\sum P_i$ being fixed. Cauchy-Scwartz might help.  </div></p>
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 18:</b>&nbsp;<font size="-2">[morecond4.png]</font><img width="" src="image/morecond4.png" style="vertical-align:text-top;">
+<b>EXERCISE 18:</b>&nbsp;(Hard) <font size="-2">[morecond4.png]</font><img width="" src="image/morecond4.png" style="vertical-align:text-top;">
 <p><a
 href="javascript:hideShow('lab18')"><b>[Hint]</b></a><div
 class="ans" id="lab18">
@@ -834,7 +833,7 @@ All swaps are one-one (repeating a swap restores original order). Also $\omega\i
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 19:</b>&nbsp;<font size="-2">[morecond5.png]</font><img width="" src="image/morecond5.png" style="vertical-align:text-top;">
+<b>EXERCISE 19:</b>&nbsp;(Medium) <font size="-2">[morecond5.png]</font><img width="" src="image/morecond5.png" style="vertical-align:text-top;">
 <p><a
 href="javascript:hideShow('lab19')"><b>[Hint]</b></a><div
 class="ans" id="lab19">
@@ -854,7 +853,7 @@ This is desirable because we are giving more weight to the $X_i$  that has less 
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 20:</b>&nbsp;<font size="-2">[morecond6.png]</font><img width="" src="image/morecond6.png" style="vertical-align:text-top;">
+<b>EXERCISE 20:</b>&nbsp;(Easy) <font size="-2">[morecond6.png]</font><img width="" src="image/morecond6.png" style="vertical-align:text-top;">
 <p><a
 href="javascript:hideShow('lab20')"><b>[Hint]</b></a><div
 class="ans" id="lab20">
@@ -864,7 +863,7 @@ Just like $(a+b)(a-b) = a^2-b^2.$
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 21:</b>&nbsp;<font size="-2">[morecond7.png]</font><img width="" src="image/morecond7.png" style="vertical-align:text-top;">
+<b>EXERCISE 21:</b>&nbsp;(Easy) <font size="-2">[morecond7.png]</font><img width="" src="image/morecond7.png" style="vertical-align:text-top;">
 <p></p>
 Do this only for discrete $X.$
 <p><a
@@ -879,7 +878,7 @@ Hence the result.
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 22:</b>&nbsp;<font size="-2">[morecond8.png]</font><img width="" src="image/morecond8.png" style="vertical-align:text-top;">
+<b>EXERCISE 22:</b>&nbsp;(Easy) <font size="-2">[morecond8.png]</font><img width="" src="image/morecond8.png" style="vertical-align:text-top;">
 <p></p>
 Do this for discrete $X, Y$  only. If $X$  can take values $x_1,x_2,x_3,...$  with
  positive probabilities, then
@@ -896,13 +895,13 @@ Then $E(g(X)Y|X=x_i) = \sum_y g(x_i) y P(Y=y|X=x_i) = g(x_i) \sum_y y P(Y=y|X=x_
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 23:</b>&nbsp;<font size="-2">[morecond9.png]</font><img width="" src="image/morecond9.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 23:</b>&nbsp;(Medium) <font size="-2">[morecond9.png]</font><img width="" src="image/morecond9.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 24:</b>&nbsp;<font size="-2">[morecond10.png]</font><img width="" src="image/morecond10.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 24:</b>&nbsp;(Medium) <font size="-2">[morecond10.png]</font><img width="" src="image/morecond10.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 25:</b>&nbsp;<font size="-2">[morecond11.png]</font><img width="" src="image/morecond11.png" style="vertical-align:text-top;">
+<b>EXERCISE 25:</b>&nbsp;(Medium) <font size="-2">[morecond11.png]</font><img width="" src="image/morecond11.png" style="vertical-align:text-top;">
 <p></p>
 Will the result hold in general if the $X_i$'s are not independent?
 <p><a
@@ -953,36 +952,36 @@ Then
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 26:</b>&nbsp;<font size="-2">[morecond12.png]</font><img width="" src="image/morecond12.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 26:</b>&nbsp;(Hard) <font size="-2">[morecond12.png]</font><img width="" src="image/morecond12.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 27:</b>&nbsp;<font size="-2">[morecond13.png]</font><img width="" src="image/morecond13.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 27:</b>&nbsp;(Hard) <font size="-2">[morecond13.png]</font><img width="" src="image/morecond13.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 28:</b>&nbsp;<font size="-2">[morecond14.png]</font><img width="" src="image/morecond14.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 28:</b>&nbsp;(Medium) <font size="-2">[morecond14.png]</font><img width="" src="image/morecond14.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 29:</b>&nbsp;<font size="-2">[morecond15.png]</font><img width="" src="image/morecond15.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 29:</b>&nbsp;(Medium) <font size="-2">[morecond15.png]</font><img width="" src="image/morecond15.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 30:</b>&nbsp;<font size="-2">[morecond16.png]</font><img width="" src="image/morecond16.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 30:</b>&nbsp;(Hard) <font size="-2">[morecond16.png]</font><img width="" src="image/morecond16.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 31:</b>&nbsp;<font size="-2">[morecond17.png]</font><img width="" src="image/morecond17.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 31:</b>&nbsp;(Hard) <font size="-2">[morecond17.png]</font><img width="" src="image/morecond17.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 32:</b>&nbsp;<font size="-2">[morecond18.png]</font><img width="" src="image/morecond18.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 32:</b>&nbsp;(Medium) <font size="-2">[morecond18.png]</font><img width="" src="image/morecond18.png" style="vertical-align:text-top;"><hr>
 </p>
 
 <p></p>
 ::<p>
-<b>EXERCISE 33:</b>&nbsp;<font size="-2">[morecond19.png]</font><img width="" src="image/morecond19.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 33:</b>&nbsp;(Medium) <font size="-2">[morecond19.png]</font><img width="" src="image/morecond19.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 34:</b>&nbsp;<font size="-2">[morecond20.png]</font><img width="" src="image/morecond20.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 34:</b>&nbsp;(Hard) <font size="-2">[morecond20.png]</font><img width="" src="image/morecond20.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 35:</b>&nbsp;<font size="-2">[morecond21.png]</font><img width="" src="image/morecond21.png" style="vertical-align:text-top;">
+<b>EXERCISE 35:</b>&nbsp;(Hard) <font size="-2">[morecond21.png]</font><img width="" src="image/morecond21.png" style="vertical-align:text-top;">
 <p><a
 href="javascript:hideShow('lab24')"><b>[Hint]</b></a><div
 class="ans" id="lab24">
@@ -1011,7 +1010,7 @@ Now you should be able to complete the rest.
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 36:</b>&nbsp;<font size="-2">[morecond22.png]</font><img width="" src="image/morecond22.png" style="vertical-align:text-top;">
+<b>EXERCISE 36:</b>&nbsp;(Hard) <font size="-2">[morecond22.png]</font><img width="" src="image/morecond22.png" style="vertical-align:text-top;">
 <p><a
 href="javascript:hideShow('lab25')"><b>[Hint]</b></a><div
 class="ans" id="lab25">
