--- a/prob1_2025/distrib1.html
+++ b/prob1_2025/distrib1.html
@@ -267,7 +267,7 @@ P(Y=1)+P(Y=3)=\frac14+\frac14=\frac12.$
 
 <p></p>
 ::<p>
-<b>EXERCISE 1:</b>&nbsp;
+<b>EXERCISE 1:</b>&nbsp;(Easy)
 $X$ follows <b>DUnif</b>$\{1,2,3,4,5\}$ distribution. Find the
 following probabilities.
 <ol>
@@ -304,7 +304,7 @@ class="ans" id="lab1"><ol>
 
 </p>
 ::<p>
-<b>EXERCISE 2:</b>&nbsp;
+<b>EXERCISE 2:</b>&nbsp;(Easy)
 $U$ is a <b>DUnif</b>$\{-2,-1,0,1,2\}$ random variable. Find the
 following probabilities.
 <ol>
@@ -333,7 +333,7 @@ class="ans" id="lab2"><ol>
 
 </p>
 ::<p>
-<b>EXERCISE 3:</b>&nbsp;
+<b>EXERCISE 3:</b>&nbsp;(Easy)
 Express the distributions of the following random variables in terms of the
 discrete uniform distribution.
 <ol type="">
@@ -415,7 +415,7 @@ Hence, $Var(X) = E(X^2)-(E(X))^2 = \frac{n^2-1}{12}.$
 
 <p></p>
 ::<p>
-<b>EXERCISE 4:</b>&nbsp;
+<b>EXERCISE 4:</b>&nbsp;(Easy)
 If $Y$ has <b>DUnif</b>$\{0,1,...,n\}$ distribution, then compute 
 $E(Y)$ and $Var(Y).$ But before you start algebraic
 manipulations, think if $E(X)$ and $Var(X)$ should be
@@ -624,7 +624,7 @@ $$
 which is the binomial PMF.
 <p></p>
 ::<p>
-<b>EXERCISE 5:</b>&nbsp;
+<b>EXERCISE 5:</b>&nbsp;(Easy)
 List all the possible outcomes of $n=4$ tosses having exactly
 $x=2$ heads. For example, one possible outcome is $HTHT.$ How
 many such outcomes are there?
@@ -653,7 +653,7 @@ P(U=2)&amp;=&amp;{5\choose2}\left(\frac14\right)^2\left(1-\frac14\right)^{5-2}\\
 
 <p></p>
 ::<p>
-<b>EXERCISE 6:</b>&nbsp;
+<b>EXERCISE 6:</b>&nbsp;(Easy)
 $Y$ is distributed as <b>Bin</b>$(4,\frac23).$ Find the following
 probabilities.
 <ol>
@@ -683,7 +683,7 @@ class="ans" id="lab6"><ol>
 
 <p></p>
 ::<p>
-<b>EXERCISE 7:</b>&nbsp;
+<b>EXERCISE 7:</b>&nbsp;(Easy)
 $Z\sim$<b>Bin</b>$(5,\frac12).$ Find the following.
 <ol>
 <li>$P(Z\mbox{ is odd})$
@@ -712,7 +712,7 @@ class="ans" id="lab7"><ol>
 
 <p></p>
 ::<p>
-<b>EXERCISE 8:</b>&nbsp;
+<b>EXERCISE 8:</b>&nbsp;(Easy)
 If $X$ has <b>Bin</b>$(100,0.5)$ distribution. Then find $a\neq37$ such
 that $$
 P(X=a) = P(X = 37).
@@ -749,7 +749,7 @@ the number of `1' s. Hence $X$ has <b>Bin</b>(6, 0.4) distribution.
 
 <p></p>
 ::<p>
-<b>EXERCISE 9:</b>&nbsp;
+<b>EXERCISE 9:</b>&nbsp;(Easy)
 In the above example let $Y$ be the number of girls. What is the
 distribution of $Y$? 
 <p><a
@@ -909,7 +909,7 @@ $V\sim$<b>Bin</b>$(6,0.1)?$
 
 <p></p>
 ::<p>
-<b>EXERCISE 10:</b>&nbsp;
+<b>EXERCISE 10:</b>&nbsp;(Easy)
 If $X_1,X_2$ and $X_3$ are independent random variables with 
 <b>Bin</b>$(5,\frac13),$ <b>Bin</b>$(10,\frac13)$ and
 <b>Bin</b>$(6,\frac13)$ distributions, respectively.
@@ -1015,7 +1015,7 @@ So $P(Y=2) = \frac35.$
 
 <p></p>
 ::<p>
-<b>EXERCISE 11:</b>&nbsp;
+<b>EXERCISE 11:</b>&nbsp;(Easy)
 $X$ is known to follow <b>HypGeom</b>$(10,4,8).$ Find the following
 probabilities.
 <ol>
@@ -1049,7 +1049,7 @@ class="ans" id="lab11"><ol>
 
 <p></p>
 ::<p>
-<b>EXERCISE 12:</b>&nbsp;
+<b>EXERCISE 12:</b>&nbsp;(Medium)
 Suppose that $Y$ has <b>HypGeom</b>$(100,30,40)$ distribution and $Z$ has 
 <b>HypGeom</b>$(100,70,40)$ distribution. Then which of the following two
 probabilities is larger and why?
@@ -1138,7 +1138,7 @@ Var(X) &amp;=&amp; E(X^2) - (E(X))^2 \\
 \end{eqnarray*}$$
 <p></p>
 ::<p>
-<b>EXERCISE 13:</b>&nbsp;
+<b>EXERCISE 13:</b>&nbsp;(Easy)
 Compute $E(X)$ and $Var(X)$ where $X$ has <b>HypGeom</b>$(N,M,n)$
 distribution with
 <ol>
@@ -1244,468 +1244,71 @@ name="Problems for practice">Problems for practice</a></h1>
 
 <p></p>
 ::<p>
-<b>EXERCISE 14:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo1.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 14:</b>&nbsp;(Easy)<font size="-2">[dtwo1.png]</font><img width="" src="image/dtwo1.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 15:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo2.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 15:</b>&nbsp;(Medium)<font size="-2">[dtwo2.png]</font><img width="" src="image/dtwo2.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 16:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo3.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 16:</b>&nbsp;(Medium)<font size="-2">[dtwo3.png]</font><img width="" src="image/dtwo3.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 17:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo4.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 17:</b>&nbsp;(Medium)<font size="-2">[dtwo4.png]</font><img width="" src="image/dtwo4.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 18:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo5.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 18:</b>&nbsp;(Medium)<font size="-2">[dtwo5.png]</font><img width="" src="image/dtwo5.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 19:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo6.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 19:</b>&nbsp;(Medium)<font size="-2">[dtwo6.png]</font><img width="" src="image/dtwo6.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 20:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo7.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 20:</b>&nbsp;(Medium)<font size="-2">[dtwo7.png]</font><img width="" src="image/dtwo7.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 21:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo8.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 21:</b>&nbsp;(Medium)<font size="-2">[dtwo8.png]</font><img width="" src="image/dtwo8.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 22:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo9.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 22:</b>&nbsp;(Hard)<font size="-2">[dtwo9.png]</font><img width="" src="image/dtwo9.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 23:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo10.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 23:</b>&nbsp;(Medium)<font size="-2">[dtwo10.png]</font><img width="" src="image/dtwo10.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 24:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo11.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 24:</b>&nbsp;(Hard)<font size="-2">[dtwo11.png]</font><img width="" src="image/dtwo11.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 25:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo12.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 25:</b>&nbsp;(Hard)<font size="-2">[dtwo12.png]</font><img width="" src="image/dtwo12.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 26:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo13.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 26:</b>&nbsp;(Hard)<font size="-2">[dtwo16.png]</font><img width="" src="image/dtwo16.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 27:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo14.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 27:</b>&nbsp;(Medium)<font size="-2">[dtwo18.png]</font><img width="" src="image/dtwo18.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 28:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo15.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 28:</b>&nbsp;(Hard)<font size="-2">[dtwo19.png]</font><img width="" src="image/dtwo19.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 29:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo16.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-
-<p><a
-href="javascript:hideShow('lab14')"><b>[Hint]</b></a><div
-class="ans" id="lab14">
-Let $X_i$  be indicator for there being a changeover at position $i$  for $i=2,...,n.$  By definition, there
- cannot be a changeover at $i=1.$  
-<p></p>
-Then the answer is $\sum_2^n E(X_i). $  Now $X_i = 1$  iff the $(i-1)$-th and
- $i$-th tosses result in either $HT$  or $TH.$  
-<p></p>
-So $E(X_i) = \cdots.$
-</div></p>
-
-</p>
+<b>EXERCISE 29:</b>&nbsp;<font size="-2">[dtwo20.png]</font><img width="" src="image/dtwo20.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 30:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo17.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 30:</b>&nbsp;<font size="-2">[dtwo21.png]</font><img width="" src="image/dtwo21.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 31:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo18.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 31:</b>&nbsp;<font size="-2">[dtwo22.png]</font><img width="" src="image/dtwo22.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 32:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo19.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 32:</b>&nbsp;<font size="-2">[dtwo23.png]</font><img width="" src="image/dtwo23.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 33:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo20.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
-::<p>
-<b>EXERCISE 34:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo21.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
-::<p>
-<b>EXERCISE 35:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo22.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
-::<p>
-<b>EXERCISE 36:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo23.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
-::<p>
-<b>EXERCISE 37:</b>&nbsp;At a party $N$ men throw their hats into a corner, and
+<b>EXERCISE 33:</b>&nbsp;At a party $N$ men throw their hats into a corner, and
 each man picks up a hat randomly. Let $X$ be the number of
 men who get their own hats. Find $E(X)$ and $V(X).$</p>
 ::<p>
-<b>EXERCISE 38:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo25.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 34:</b>&nbsp;<font size="-2">[dtwo25.png]</font><img width="" src="image/dtwo25.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 39:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo26.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 35:</b>&nbsp;<font size="-2">[dtwo26.png]</font><img width="" src="image/dtwo26.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 40:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo27.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 36:</b>&nbsp;<font size="-2">[dtwo27.png]</font><img width="" src="image/dtwo27.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 41:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo28.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 37:</b>&nbsp;<font size="-2">[dtwo28.png]</font><img width="" src="image/dtwo28.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 42:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo29.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 38:</b>&nbsp;<font size="-2">[dtwo29.png]</font><img width="" src="image/dtwo29.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 43:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo30.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 39:</b>&nbsp;<font size="-2">[dtwo30.png]</font><img width="" src="image/dtwo30.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 44:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo31.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 40:</b>&nbsp;<font size="-2">[dtwo31.png]</font><img width="" src="image/dtwo31.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 45:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo32.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 41:</b>&nbsp;<font size="-2">[dtwo32.png]</font><img width="" src="image/dtwo32.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 46:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo33.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 42:</b>&nbsp;<font size="-2">[dtwo33.png]</font><img width="" src="image/dtwo33.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 47:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo34.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 43:</b>&nbsp;<font size="-2">[dtwo34.png]</font><img width="" src="image/dtwo34.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 48:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo35.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
+<b>EXERCISE 44:</b>&nbsp;<font size="-2">[dtwo35.png]</font><img width="" src="image/dtwo35.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 49:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo36.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
-::<p>
-<b>EXERCISE 50:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo37.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
-::<p>
-<b>EXERCISE 51:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/dtwo38.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
-
-<p></p>
+<b>EXERCISE 45:</b>&nbsp;<font size="-2">[dtwo36.png]</font><img width="" src="image/dtwo36.png" style="vertical-align:text-top;"></p>
 
 <p></p>
 <hr xmlns="http://www.w3.org/1999/xhtml"/>
