--- a/prob1_2025/distrib2.html
+++ b/prob1_2025/distrib2.html
@@ -1210,8 +1210,12 @@ box $n$ times without ever using the other box.]
 <hr>
 
 </p>
-
-<p></p>
+::<p>
+<b>EXERCISE 34:</b>&nbsp;(Medium) Should go to next page.<font size="-2">[dtwo13.png]</font><img width="" src="image/dtwo13.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 35:</b>&nbsp;<font size="-2">[dtwo14.png]</font><img width="" src="image/dtwo14.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 36:</b>&nbsp;<font size="-2">[dtwo15.png]</font><img width="" src="image/dtwo15.png" style="vertical-align:text-top;"></p>
 
 <p></p>
 <hr xmlns="http://www.w3.org/1999/xhtml"/>
