--- a/prob1_2025/exp.html
+++ b/prob1_2025/exp.html
@@ -272,12 +272,12 @@ $$
 
 <p></p>
 ::<p>
-<b>EXERCISE 1:</b>&nbsp;A random variable $X$  takes the values $-2, -1, 0, 1 $  and $2$  with
+<b>EXERCISE 1:</b>&nbsp;(Easy)A random variable $X$  takes the values $-2, -1, 0, 1 $  and $2$  with
  probabilities $p,q,1-2p-2q, p$  and $q,$  respectively. Find $E(X).$</p>
 
 <p></p>
 ::<p>
-<b>EXERCISE 2:</b>&nbsp;A random variable takes the values $1,2,...,10$  with probabilities
+<b>EXERCISE 2:</b>&nbsp;(Easy)A random variable takes the values $1,2,...,10$  with probabilities
  $p_1,p_2,...,p_{10},$  respectively, where $\sum_i p_i = 1.$  Prove that $1\leq
  E(X)\leq 10.$  Also find $p_i$'s if $E(X) = 10.$  </p>
 
@@ -301,7 +301,7 @@ both $X_+$ and $X_-$ are nonnegative.
 <p></p>
 
 <p>
-<b>EXERCISE 3:</b>&nbsp;Which of the following must be true?
+<b>EXERCISE 3:</b>&nbsp;(Easy)Which of the following must be true?
 <ol class="hl">
 
 <li>$X = X_++X_-.$</li>
@@ -458,7 +458,7 @@ then $E(X)=a$ if and only if $X$ is degenerate at $a.$
 </fieldset>
 
 <p>
-<b>EXERCISE 4:</b>&nbsp;Prove this for simple $X$.</p>
+<b>EXERCISE 4:</b>&nbsp;(Easy)Prove this for simple $X$.</p>
 
 <p></p>
 However, if $a\in{\mathbb R}$ is replaced by $\infty,$ then the
@@ -505,7 +505,7 @@ Prove it for simple $X$.
 
 <p></p>
 ::<p>
-<b>EXERCISE 5:</b>&nbsp;
+<b>EXERCISE 5:</b>&nbsp;(Easy)
 If $E(X) = \mu\in{\mathbb R},$ then what is $E(X-\mu)?$
 </p>
 
@@ -594,7 +594,7 @@ as required.
 
 <p></p>
 ::<p>
-<b>EXERCISE 6:</b>&nbsp;Which is larger $(E(X))^2$ or $E(X^2)?$ Assume
+<b>EXERCISE 6:</b>&nbsp;(Medium)Which is larger $(E(X))^2$ or $E(X^2)?$ Assume
 that both exist finitely.</p>
 
 <p></p>
@@ -753,7 +753,7 @@ Hence the result.
 
 <p></p>
 ::<p>
-<b>EXERCISE 7:</b>&nbsp;If $E(|X|)=\infty,$  then what can you say about $E(X)?$
+<b>EXERCISE 7:</b>&nbsp;(Medium)If $E(|X|)=\infty,$  then what can you say about $E(X)?$
 <p><a
 href="javascript:hideShow('lab1')"><b>[Hint]</b></a><div
 class="ans" id="lab1">May be $\infty$  or $-\infty$  or undefined.</div></p>
@@ -832,7 +832,7 @@ Then clearly, $X\geq Y$. So $E(X)\geq E(Y) = \epsilon P(X\geq \epsilon)$.
 <h1><a
 name="Problems for practice">Problems for practice</a></h1>
 ::<p>
-<b>EXERCISE 8:</b>&nbsp;
+<b>EXERCISE 8:</b>&nbsp;(Easy)
 What is $E(X)$ if $X$ takes the
 values $1,2,...,n$ with probability $\frac 1n$ each?
 <p><a
@@ -841,7 +841,7 @@ class="ans" id="lab2">$\frac{n+1}{2}.$</div></p>
 
 </p>
 ::<p>
-<b>EXERCISE 9:</b>&nbsp;Show that if $X$  is a random variable taking only non-negative
+<b>EXERCISE 9:</b>&nbsp;(Medium)Show that if $X$  is a random variable taking only non-negative
 integer values, then 
 $$E(X) = \sum_{k=1}^\infty P(X\geq k).$$
 This formula often proves useful for finding expected counts.
@@ -862,7 +862,7 @@ you rearrange the terms.
 
 </p>
 ::<p>
-<b>EXERCISE 10:</b>&nbsp;For a group of $n$  people find the expected number of days of the year which are
+<b>EXERCISE 10:</b>&nbsp;(Medium)For a group of $n$  people find the expected number of days of the year which are
  birthdays of exactly $k$  people. (Assume 365 days and that all arrangements are equally
  probable.) Also find the expected number of multiple birthdays. How large should $n$  be to
  make this expectation exceed 1?
@@ -883,7 +883,7 @@ Expected number of multiple birthdays is $365\left\{1-\left(\frac{364}{365}\righ
 
 </p>
 ::<p>
-<b>EXERCISE 11:</b>&nbsp;A man with $n$  keys wants to open a door (where exactly one key works). He tries the
+<b>EXERCISE 11:</b>&nbsp;(Medium)A man with $n$  keys wants to open a door (where exactly one key works). He tries the
  keys independently at random. Find the expected number of trials needed to open the door if 
  keys are tried (a) with replacement (b) without replacement.
 <p><a
@@ -894,7 +894,7 @@ class="ans" id="lab5">(a) $\sum_1^ \infty k\cdot \left(1-\frac 1n\right)^{k-1}\c
 
 </p>
 ::<p>
-<b>EXERCISE 12:</b>&nbsp;<center>
+<b>EXERCISE 12:</b>&nbsp;(Hard)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv5.png"></th>
@@ -920,7 +920,7 @@ Differentiate (or think of the graph) to see that the maximising value of $p$  i
 
 </p>
 ::<p>
-<b>EXERCISE 13:</b>&nbsp;<center>
+<b>EXERCISE 13:</b>&nbsp;(Hard)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv6.png"></th>
@@ -943,7 +943,7 @@ Suppose that it charges $B.$  Then expected profit is $B-pA.$  To keep it 10% of
 
 </p>
 ::<p>
-<b>EXERCISE 14:</b>&nbsp;<center>
+<b>EXERCISE 14:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv7.png"></th>
@@ -970,7 +970,7 @@ $E(Y) = \frac{40+33+25+50}{4}.$
 
 </p>
 ::<p>
-<b>EXERCISE 15:</b>&nbsp;<center>
+<b>EXERCISE 15:</b>&nbsp;(Hard)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv8.png"></th>
@@ -999,7 +999,7 @@ This is maximised when $pq = p(1-p)$  is maximised, which is when $p=\frac 12.$
 </div></p>
 </p>
 ::<p>
-<b>EXERCISE 16:</b>&nbsp;<center>
+<b>EXERCISE 16:</b>&nbsp;(Easy)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv9.png"></th>
@@ -1019,7 +1019,7 @@ class="ans" id="lab10">
 </div></p>
 </p>
 ::<p>
-<b>EXERCISE 17:</b>&nbsp;<center>
+<b>EXERCISE 17:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv11.png"></th>
@@ -1049,7 +1049,7 @@ So $E(X) = 17\times \frac 14 = \frac{17}{4}.$
 
 </p>
 ::<p>
-<b>EXERCISE 18:</b>&nbsp;<center>
+<b>EXERCISE 18:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv12.png"></th>
@@ -1074,7 +1074,7 @@ So $E(X) = \frac{150\times149}{2\times199}.$
 </div></p>
 </p>
 ::<p>
-<b>EXERCISE 19:</b>&nbsp;<center>
+<b>EXERCISE 19:</b>&nbsp;(Easy)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv13.png"></th>
@@ -1093,7 +1093,7 @@ $E(X) = \frac 52.$
 
 </p>
 ::<p>
-<b>EXERCISE 20:</b>&nbsp;<center>
+<b>EXERCISE 20:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv14.png"></th>
@@ -1117,7 +1117,7 @@ Equality if and only if $V(X)= 0$, <i>i.e.</i>, if $X$  is a degenerate random v
 
 <p></p>
 ::<p>
-<b>EXERCISE 21:</b>&nbsp;<center>
+<b>EXERCISE 21:</b>&nbsp;(Hard)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/fellrv1.png"></th>
@@ -1156,7 +1156,7 @@ $$-\frac{1}{k^2}-(1-p)^k\log(1-p).$$
 
 </p>
 ::<p>
-<b>EXERCISE 22:</b>&nbsp;<center>
+<b>EXERCISE 22:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/fellrv2.png"></th>
@@ -1185,7 +1185,7 @@ You may like to deal with the $r=1$  case first.
 
 </p>
 ::<p>
-<b>EXERCISE 23:</b>&nbsp;<center>
+<b>EXERCISE 23:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most4.png"></th>
@@ -1213,7 +1213,7 @@ Put $x=\frac 56$  to find the required expectation.
 
 </p>
 ::<p>
-<b>EXERCISE 24:</b>&nbsp;<center>
+<b>EXERCISE 24:</b>&nbsp;(Hard)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most6.png"></th>
@@ -1248,7 +1248,7 @@ $$E(X) = \left(\frac 16\right)^3(5^3-3\times 5^2-6\times5-3).$$
 
 </p>
 ::<p>
-<b>EXERCISE 25:</b>&nbsp;<center>
+<b>EXERCISE 25:</b>&nbsp;(Hard)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most14.png"></th>
@@ -1288,7 +1288,7 @@ The answer to the problem is $E(T_1+\cdots+T_5) = 1+E(T_2)+\cdots+E(T_5).$
 
 </p>
 ::<p>
-<b>EXERCISE 26:</b>&nbsp;<center>
+<b>EXERCISE 26:</b>&nbsp;(Hard)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most15.png"></th>
@@ -1354,7 +1354,7 @@ Or...use the indicator trick!!!
 
 </p>
 ::<p>
-<b>EXERCISE 27:</b>&nbsp;<center>
+<b>EXERCISE 27:</b>&nbsp;(Hard)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most34.png"></th>
@@ -1394,7 +1394,7 @@ So the function is maximised at $n=364$  and $365.$
 
 <p></p>
 ::<p>
-<b>EXERCISE 28:</b>&nbsp;<center>
+<b>EXERCISE 28:</b>&nbsp;(Hard)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most40.png"></th>
