--- a/prob1_2025/fluc.html
+++ b/prob1_2025/fluc.html
@@ -152,25 +152,25 @@ function myFunction() {
 <h3>Random walks</h3>
 <ul>
 <li>
-<a href="#Random walks">Random walks</a>
+<a href="#Introduction to simple symmetric random walks">Introduction to simple symmetric random walks</a>
 </li>
-<li>&nbsp;&nbsp;&nbsp;
-<a href="#Basics">Basics</a>
+<li>
+<a href="#Counting paths">Counting paths</a>
 </li>
-<li>&nbsp;&nbsp;&nbsp;
-<a href="#Notation">Notation</a>
-</li>
-<li>&nbsp;&nbsp;&nbsp;
+<li>
 <a href="#Reflection principle">Reflection principle</a>
 </li>
-<li>&nbsp;&nbsp;&nbsp;
+<li>
 <a href="#Problems for practice">Problems for practice</a>
 </li>
-<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="#Exercises about first time visits">Exercises about first time visits</a>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Exercises about first passages">Exercises about first passages</a>
 </li>
-<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="#Exercises regarding never returning to 0">Exercises regarding never returning to 0</a>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Exercises regarding never returning to 0 (fixed end point)">Exercises regarding never returning to 0 (fixed end point)</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Exercises regarding never returning to 0 (arbitrary end point)">Exercises regarding never returning to 0 (arbitrary end point)</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#Exercises about the maximum place visited">Exercises about the maximum place visited</a>
@@ -187,13 +187,12 @@ function myFunction() {
 </ul>
 <hr/>
 <title xmlns="">Random walks</title>
-
-<h1><a
-name="Random walks">Random walks</a></h1>
 The material here is taken from chapter 3 of Feller, Volume
 1.
-<h2><a
-name="Basics">Basics</a></h2>
+<h1><a
+name="Introduction to simple symmetric random walks">Introduction to simple symmetric random walks</a></h1>
+<a href="https://youtu.be/BFj_fj9Ln5Q">Video for this section</a>
+<p></p>
 A drunkard stands at some integer on a number line. At each step he moves
 either left or right to the adjacent number. He chooses the left
 or right with equal probability. 
@@ -264,8 +263,10 @@ $k\in{\mathbb Z}$ in exactly $n$ steps.</p>
 
 <p></p>
 
-<h2><a
-name="Notation">Notation</a></h2>
+<h1><a
+name="Counting paths">Counting paths</a></h1>
+<a href="https://youtu.be/frfkJ9sLWoc">Video for this section</a>
+<p></p>
 Any path from time $m$ to $n$ (with $m&lt;n$)
 will be considered as a function $\pi:\{m,...,n\}\rightarrow{\mathbb Z}.$ 
 If, for example,
@@ -395,8 +396,10 @@ terms of sizes of events rather than in terms of their probabilities.
 <p></p>
 
 
-<h2><a
-name="Reflection principle">Reflection principle</a></h2>
+<h1><a
+name="Reflection principle">Reflection principle</a></h1>
+<a href="https://youtu.be/a8Cx3GdROZ0">Video for this section</a>
+<p></p>
 Our aim here is to find probabilities of various sets of paths, or, equivalently to find the sizes of
 of these sets. We can often express them easily using the $N_{n,r}$ notation.
 This is thanks to the <i>reflection principle</i>,  which we discuss now.
@@ -573,13 +576,15 @@ between $A:(1,1)$ and $B:(10,4).$
  ■
 </p>
 
-<h2><a
-name="Problems for practice">Problems for practice</a></h2>
+<h1><a
+name="Problems for practice">Problems for practice</a></h1>
 Here are a few exercises that will demonstrate some application of the reflection principle.
 <p></p>
 
-<h3><a
-name="Exercises about first time visits">Exercises about first time visits</a></h3>
+<h2><a
+name="Exercises about first passages">Exercises about first passages</a></h2>
+<a href="https://youtu.be/llYADewax74">Video for this section</a>
+<p></p>
 
 <p>
 <b>EXERCISE 3:</b>&nbsp;Consider a simple, symmetric random walk starting from 0. What is the chance it visits 2 for
@@ -632,8 +637,10 @@ time $n-1$ to $n$ is forced (it has to move up).
 
 <p></p>
 
-<h3><a
-name="Exercises regarding never returning to 0">Exercises regarding never returning to 0</a></h3>
+<h2><a
+name="Exercises regarding never returning to 0 (fixed end point)">Exercises regarding never returning to 0 (fixed end point)</a></h2>
+<a href="https://youtu.be/ypff2sktQhY">Video for this section</a>
+<p></p>
 
 <p>
 <b>EXERCISE 5:</b>&nbsp;What is conditional probability that a simple, symmetric random walk starting from 0 will end
@@ -670,10 +677,17 @@ Hence the answer is $N_{2n-1,2r-1}-N_{2n-1,2r+1}$.
 
 <p></p>
 
+<h2><a
+name="Exercises regarding never returning to 0 (arbitrary end point)">Exercises regarding never returning to 0 (arbitrary end point)</a></h2>
+<a href="https://youtu.be/PeEY6VYMLGA">Video for this section</a>
+<p></p>
+
+<p></p>
+
 <p>
 <b>EXERCISE 7:</b>&nbsp;
 Consider all paths of length $2n$ starting
-at $(0,0)$. The number of these paths
+at $(0,0)$. Show that the number of these paths
 that never return to $0$ is $N_{2n,0}.$
 <p><a
 href="javascript:hideShow('lab5')"><b>[Hint]</b></a><div
