--- a/prob1_2025/indep.html
+++ b/prob1_2025/indep.html
@@ -211,7 +211,7 @@ From the definition also $P(A\cap B) = P(\{HH\}) = \frac 14 = \frac 12\times \fr
 <p></p>
 
 <p>
-<b>EXERCISE 1:</b>&nbsp;
+<b>EXERCISE 1:</b>&nbsp;(Easy)
 Consider a single roll of a fair die. Write down
 two events, $A,B$  such that $A,B$ are
 independent. Also, write down two events $C,D$ 
@@ -241,7 +241,7 @@ $P(A)=P(B)=\frac 12$  and $P(A\cap B)=\frac 14.$  So we have independence.
 <p></p>
 
 <p>
-<b>EXERCISE 2:</b>&nbsp;
+<b>EXERCISE 2:</b>&nbsp;(Easy)
 Same problem as above, but this time the coin is biased. Say, $P(H)=0.6.$  
 <p><a
 href="javascript:hideShow('lab1')"><b>[Hint]</b></a><div
@@ -527,49 +527,52 @@ name="Problems for practice">Problems for practice</a></h1>
 
 <ol type="">
 <p>
-<b>EXERCISE 3:</b>&nbsp;If $A,B$  are independent, then show that $A^c,B$  are also independent. Are
+<b>EXERCISE 3:</b>&nbsp;(Easy) If $A,B$  are independent, then show that $A^c,B$  are also independent. Are
  $A^c,B^c$  also independent?</p>
 
 <p>
-<b>EXERCISE 4:</b>&nbsp;Is it possible to have an event that is independent of itself? If so, find all such events. If not, prove why not.</p>
+<b>EXERCISE 4:</b>&nbsp;(Easy) Is it possible to have an event that is independent of itself? If so, find all such
+ events. If not, prove why not.</p>
 
 <p>
-<b>EXERCISE 5:</b>&nbsp;Is it possible to have an event that is independent of all other events? If so, find all such events. If
+<b>EXERCISE 5:</b>&nbsp;(Easy) Is it possible to have an event that is independent of all other events? If so, find all such events. If
  not, prove why not.</p>
 
 <p>
-<b>EXERCISE 6:</b>&nbsp;If $A,B$  are independent, and $A,C$  are also independent, then is it true that
+<b>EXERCISE 6:</b>&nbsp;(Medium) If $A,B$  are independent, and $A,C$  are also independent, then is it true that
  $A$  and $B\cup C$  must also be independent?</p>
 
 <p>
-<b>EXERCISE 7:</b>&nbsp;If $A$  and $B$  are mutually exclusive, then must $A,B$  be independent? Must they be dependent?</p>
+<b>EXERCISE 7:</b>&nbsp;(Easy) If $A$  and $B$  are mutually exclusive, then must $A,B$  be
+ independent? Must they be dependent?</p>
 
 <p>
-<b>EXERCISE 8:</b>&nbsp;The numbers $-10,...,-1,1,...,10$  are written on 20 pieces of papers. One of the papers
+<b>EXERCISE 8:</b>&nbsp;(Easy) The numbers $-10,...,-1,1,...,10$  are written on 20 pieces of papers. One of the papers
  is drawn at random. Let $A$  be the event that the selected number is negative, and $B$
   be the event that the selected number has absolute value $&gt;5.$  Are $A,B$  independent?</p>
 
 <p>
-<b>EXERCISE 9:</b>&nbsp;Same set up as above. Find an event $C$  such that $A,B,C$  are mutually independent.</p>
+<b>EXERCISE 9:</b>&nbsp;(Medium) Same set up as above. Find an event $C$  such that $A,B,C$  are mutually independent.</p>
 
 <p>
-<b>EXERCISE 10:</b>&nbsp;If $A\subseteq B$  are two events, can $A,B$  be independent?</p>
+<b>EXERCISE 10:</b>&nbsp;(Medium) If $A\subseteq B$  are two events, can $A,B$  be independent?</p>
 
 <p>
-<b>EXERCISE 11:</b>&nbsp;If $P(A_i)=p_i$  for $i=1,2,3,$  and $A_i$'s are mutually independent, then find $P(A_1\cup A_2\cup A_3).$</p>
+<b>EXERCISE 11:</b>&nbsp;(Easy) If $P(A_i)=p_i$  for $i=1,2,3,$  and $A_i$'s are mutually independent,
+ then find $P(A_1\cup A_2\cup A_3).$</p>
 
 <p>
-<b>EXERCISE 12:</b>&nbsp;If two fair dice are rolled independently, find the probability that the first shows a number
+<b>EXERCISE 12:</b>&nbsp;(Easy) If two fair dice are rolled independently, find the probability that the first shows a number
  strictly larger than the second. </p>
 
 <p>
-<b>EXERCISE 13:</b>&nbsp;If two fair dice are rolled independently, find the probability that the first number
+<b>EXERCISE 13:</b>&nbsp;(Easy) If two fair dice are rolled independently, find the probability that the first number
 divides the second. </p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 14:</b>&nbsp;<center>
+<b>EXERCISE 14:</b>&nbsp;(Medium) <center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most2.png"></th>
@@ -580,6 +583,8 @@ divides the second. </p>
 </table>
 </center>
 
+<p></p>
+Here "in a row" means "consecutively."
 <p><a
 href="javascript:hideShow('lab2')"><b>[Hint]</b></a><div
 class="ans" id="lab2">
@@ -603,7 +608,7 @@ So $A-B &lt; 0.$ Hence Elmer should play champion-father-champion.
 <p></p>
 
 <p>
-<b>EXERCISE 15:</b>&nbsp;<center>
+<b>EXERCISE 15:</b>&nbsp;(Medium) <center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most3.png"></th>
@@ -635,7 +640,7 @@ So both the jury are equally likely to reach the correct decision.
 </p>
 
 <p>
-<b>EXERCISE 16:</b>&nbsp;<center>
+<b>EXERCISE 16:</b>&nbsp;(Easy)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most18.png"></th>
@@ -655,7 +660,7 @@ $2^{-100}{100 \choose 50}\approx 0.08.$
 </p>
 
 <p>
-<b>EXERCISE 17:</b>&nbsp;<center>
+<b>EXERCISE 17:</b>&nbsp;(Hard)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most20.png"></th>
