--- a/prob1_2025/joint.html
+++ b/prob1_2025/joint.html
@@ -647,7 +647,7 @@ independent, then $V(X+Y) = V(X)+V(Y).$
 
 <p></p>
 ::<p>
-<b>EXERCISE 1:</b>&nbsp;
+<b>EXERCISE 1:</b>&nbsp;(Medium)
 If $X$ and $Y$ have finite first moments, and at least one of them  is a degenerate random variable, then show
  that $cov(X,Y)=0.$  
 <p><a
@@ -659,7 +659,7 @@ If $X$  is degenerate, say $P(X=c)=1,$  then $\cov(X,Y) = E(XY)-E(X)E(Y) = E(xY)
 
 <p></p>
 ::<p>
-<b>EXERCISE 2:</b>&nbsp;Let $X_1,X_2,...,X_n$  be identically distributed independent random variables with $V(X_1) = \sigma^2 &lt; \infty.$  Then what is 
+<b>EXERCISE 2:</b>&nbsp;(Easy)Let $X_1,X_2,...,X_n$  be identically distributed independent random variables with $V(X_1) = \sigma^2 &lt; \infty.$  Then what is 
 $V(\overline X_n)?$  Here $\overline X_n = \frac 1n\sum_1^n X_i.$
 <p><a
 href="javascript:hideShow('lab2')"><b>[Hint]</b></a><div
@@ -755,7 +755,7 @@ if $X,Y$ are linearly linearly related with probability 1,
 <h1><a
 name="Problems for practice">Problems for practice</a></h1>
 ::<p>
-<b>EXERCISE 3:</b>&nbsp;
+<b>EXERCISE 3:</b>&nbsp;(Hard)
 We have $n$ letters are randomly put into $n$
 addressed envelopes. Find $E(X),$
 where $X$ is the number of correctly placed letters.<p>
@@ -783,7 +783,7 @@ It's a bit surprising that $E(X)$ does not depend on $n.$
 
 <p></p>
 ::<p>
-<b>EXERCISE 4:</b>&nbsp;<center>
+<b>EXERCISE 4:</b>&nbsp;(Hard)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most45.png"></th>
@@ -813,7 +813,7 @@ So $E(X) = 1.$
 
 </p>
 ::<p>
-<b>EXERCISE 5:</b>&nbsp;<center>
+<b>EXERCISE 5:</b>&nbsp;(Easy)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt1.png"></th>
@@ -838,7 +838,7 @@ $E(X) = \sum_{x=1}^N x f(x) = \frac{2}{N(N+1)}\sum_{x=1}^N x^2 = \frac{2}{N(N+1)
 
 </p>
 ::<p>
-<b>EXERCISE 6:</b>&nbsp;<center>
+<b>EXERCISE 6:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt2.png"></th>
@@ -868,7 +868,7 @@ Hence $|E(X)-E(Y)| \leq M,$  as required.
 
 </p>
 ::<p>
-<b>EXERCISE 7:</b>&nbsp;<center>
+<b>EXERCISE 7:</b>&nbsp;(Easy)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt3.png"></th>
@@ -887,7 +887,7 @@ $E(X) = \frac N2$  and $V(X) = \frac{N(2n+1)}{6}-\frac{N^2}{4} = \frac{N^2+2N}{1
 
 </p>
 ::<p>
-<b>EXERCISE 8:</b>&nbsp;<center>
+<b>EXERCISE 8:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt4.png"></th>
@@ -913,7 +913,7 @@ is a PMF with the required property.
 
 </p>
 ::<p>
-<b>EXERCISE 9:</b>&nbsp;<center>
+<b>EXERCISE 9:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt5.png"></th>
@@ -935,7 +935,7 @@ Now $E(X^4)E(Y^2)-E^2(X^2)E^2(Y) = E(X^4)E(Y^2) -0 = 2\times1 = 2.$
 
 </p>
 ::<p>
-<b>EXERCISE 10:</b>&nbsp;<center>
+<b>EXERCISE 10:</b>&nbsp;(Easy)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt6.png"></th>
@@ -954,7 +954,7 @@ $E(2X+3Y) = 2E(X)+3E(Y)$  and $V(2X+3Y) = 4V(X)+9V(Y).$
 
 </p>
 ::<p>
-<b>EXERCISE 11:</b>&nbsp;<center>
+<b>EXERCISE 11:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt7.png"></th>
@@ -983,7 +983,7 @@ Hence $E\left(\sum (X_k-\overline X)^2\right) = n\sigma^2- n\times \frac{\sigma^
 
 </p>
 ::<p>
-<b>EXERCISE 12:</b>&nbsp;<center>
+<b>EXERCISE 12:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt8.png"></th>
@@ -1013,7 +1013,7 @@ Now simplify.
 
 </p>
 ::<p>
-<b>EXERCISE 13:</b>&nbsp;<center>
+<b>EXERCISE 13:</b>&nbsp;(Hard)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt9.png"></th>
@@ -1043,7 +1043,7 @@ V(S_n)
 
 </p>
 ::<p>
-<b>EXERCISE 14:</b>&nbsp;<center>
+<b>EXERCISE 14:</b>&nbsp;(Easy)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt10.png"></th>
@@ -1069,7 +1069,7 @@ Also $cov(X_1-X_2,X_2+X_3) = cov(X_1,X_2)+\cov(X_1,X_3)-cov(X_2,X_2)-cov(X_2,X_3
 
 </p>
 ::<p>
-<b>EXERCISE 15:</b>&nbsp;<center>
+<b>EXERCISE 15:</b>&nbsp;(Easy)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt11.png"></th>
@@ -1090,7 +1090,7 @@ $V(X-2Y) = V(X)+4V(Y)-4cov(X,Y) = 1+8-4\times \frac 12\times \sqrt{1\times 2}.$
 
 </p>
 ::<p>
-<b>EXERCISE 16:</b>&nbsp;<center>
+<b>EXERCISE 16:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt12.png"></th>
@@ -1110,7 +1110,7 @@ $cor(U,V)=-1.$
 
 </p>
 ::<p>
-<b>EXERCISE 17:</b>&nbsp;<center>
+<b>EXERCISE 17:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt13.png"></th>
@@ -1158,7 +1158,7 @@ Hence $cor(X,Y) =-\frac 12. $
 
 </p>
 ::<p>
-<b>EXERCISE 18:</b>&nbsp;<center>
+<b>EXERCISE 18:</b>&nbsp;(Hard)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt14.png"></th>
@@ -1181,7 +1181,7 @@ class="ans" id="lab18">
 
 </p>
 ::<p>
-<b>EXERCISE 19:</b>&nbsp;<center>
+<b>EXERCISE 19:</b>&nbsp;(Hard)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt15.png"></th>
@@ -1219,7 +1219,7 @@ The rest follows using simpe algebra.
 
 </p>
 ::<p>
-<b>EXERCISE 20:</b>&nbsp;<center>
+<b>EXERCISE 20:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt16.png"></th>
@@ -1248,7 +1248,7 @@ So $\delta=1$  makes both sides $\frac 19.$
 
 </p>
 ::<p>
-<b>EXERCISE 21:</b>&nbsp;<center>
+<b>EXERCISE 21:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt17.png"></th>
