--- a/prob1_2025/mom.html
+++ b/prob1_2025/mom.html
@@ -421,7 +421,7 @@ name="Problems for practice">Problems for practice</a></h1>
 
 <p></p>
 ::<p>
-<b>EXERCISE 1:</b>&nbsp;A box has 6 red balls an 4 black balls. An SRSWR of
+<b>EXERCISE 1:</b>&nbsp;(Easy)A box has 6 red balls an 4 black balls. An SRSWR of
 size $n$ is selected. If $X$ is the number of red
 balls selected, then find PMF of $X$  and $E(X).$ Also solve the
 problem in the case of SRSWOR.
@@ -441,7 +441,7 @@ By the way, this does not mean that $X$  can indeed take all the values from 0 t
 
 </p>
 ::<p>
-<b>EXERCISE 2:</b>&nbsp;Let $N$ be a positive integer. Let 
+<b>EXERCISE 2:</b>&nbsp;(Easy)Let $N$ be a positive integer. Let 
 $$
 f(x) = \left\{\begin{array}{ll}c 2^x &\text{if }x=1,2,...,N\\0&\text{otherwise.}\end{array}\right.
 $$
@@ -459,7 +459,7 @@ Similarly, you can find $V(X).$
 </div></p>
 </p>
 ::<p>
-<b>EXERCISE 3:</b>&nbsp;An SRSWR of size 2 is drawn from $\{1,2,...,12\}.$
+<b>EXERCISE 3:</b>&nbsp;(Medium)An SRSWR of size 2 is drawn from $\{1,2,...,12\}.$
 Let $X$ be the maximum of the two numbers
 selected. Find $E(X).$
 <p><a
@@ -476,7 +476,7 @@ Hence $E(X) = \sum_1^{12} \frac{2k^2-k}{144}=....$
 
 </p>
 ::<p>
-<b>EXERCISE 4:</b>&nbsp;An SRSWR of size $n$ is selected
+<b>EXERCISE 4:</b>&nbsp;(Medium)An SRSWR of size $n$ is selected
 from $\{1,2,...,12\}.$ Let $a_n $ be the expected
 value of the maximum of the sample. Show that $a_n \leq
 a_{n+1}$ without explicily finding $a_n$ in terms of $n.$
@@ -498,7 +498,7 @@ Hence $a_{n+1}\geq a_n,$  as required.
 
 </p>
 ::<p>
-<b>EXERCISE 5:</b>&nbsp;<center>
+<b>EXERCISE 5:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossexp1.png"></th>
@@ -521,7 +521,7 @@ Hence $P(0\leq X\leq 40)\geq 1-\frac{1}{20} = \frac{19}{20}.$
 
 </p>
 ::<p>
-<b>EXERCISE 6:</b>&nbsp;<center>
+<b>EXERCISE 6:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossexp2.png"></th>
@@ -553,7 +553,7 @@ So we need $1-\frac 1n \geq 0.9$  or $n\geq 10.$
 
 </p>
 ::<p>
-<b>EXERCISE 7:</b>&nbsp;<center>
+<b>EXERCISE 7:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossexp3.png"></th>
