--- a/prob1_2025/rv.html
+++ b/prob1_2025/rv.html
@@ -727,7 +727,7 @@ The CDF of a discrete random variable is a step function like the one we saw in 
 <h1><a
 name="Problems for practice">Problems for practice</a></h1>
 ::<p>
-<b>EXERCISE 1:</b>&nbsp;<center>
+<b>EXERCISE 1:</b>&nbsp;(Easy)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv1.png"></th>
@@ -747,7 +747,7 @@ $P(X=i) = \frac{^5P_{i-1}\times 5\times (10-i)!}{10!}$  for $i=1,2,3,4,5,6.$  Th
 
 </p>
 ::<p>
-<b>EXERCISE 2:</b>&nbsp;<center>
+<b>EXERCISE 2:</b>&nbsp;(Easy)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv2.png"></th>
@@ -765,7 +765,7 @@ class="ans" id="lab2">If $n$  is even, then all even values between $0$  and $n.
 
 </p>
 ::<p>
-<b>EXERCISE 3:</b>&nbsp;<center>
+<b>EXERCISE 3:</b>&nbsp;(Easy)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv3.png"></th>
@@ -804,7 +804,7 @@ class="ans" id="lab3">
 
 <p></p>
 ::<p>
-<b>EXERCISE 4:</b>&nbsp;<center>
+<b>EXERCISE 4:</b>&nbsp;(Easy)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossrv4.png"></th>
@@ -829,7 +829,7 @@ Hence $P(X=1) = F(1)-F(1-).$
 
 <p></p>
 ::<p>
-<b>EXERCISE 5:</b>&nbsp;<center>
+<b>EXERCISE 5:</b>&nbsp;(Easy)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/hpsrv1.png"></th>
@@ -854,7 +854,7 @@ since $P(X=3)=0$.
 In all the following problems the term "density" stands for "PMF".
 <p></p>
 ::<p>
-<b>EXERCISE 6:</b>&nbsp;<center>
+<b>EXERCISE 6:</b>&nbsp;(Easy)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/hpsrv3.png"></th>
@@ -879,7 +879,7 @@ Here we have the understanding that $\binom{n}{r} = 0$  if $r\not\in\{0,1,...,n\
 
 </p>
 ::<p>
-<b>EXERCISE 7:</b>&nbsp;<center>
+<b>EXERCISE 7:</b>&nbsp;(Easy)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/hpsrv4.png"></th>
@@ -899,7 +899,7 @@ So $c(2+2^2+\cdots 2^N) = 1$.
 
 </p>
 ::<p>
-<b>EXERCISE 8:</b>&nbsp;<center>
+<b>EXERCISE 8:</b>&nbsp;(Easy)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/hpsrv5.png"></th>
@@ -926,7 +926,7 @@ class="ans" id="lab8">
 
 </p>
 ::<p>
-<b>EXERCISE 9:</b>&nbsp;<center>
+<b>EXERCISE 9:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/hpsrv6.png"></th>
@@ -961,7 +961,7 @@ which is the required PMF.
 
 </p>
 ::<p>
-<b>EXERCISE 10:</b>&nbsp;<center>
+<b>EXERCISE 10:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/hpsrv7.png"></th>
@@ -1000,7 +1000,7 @@ The nex two problems refer to the following CDF:
 </table>
 </center>
 ::<p>
-<b>EXERCISE 11:</b>&nbsp;<center>
+<b>EXERCISE 11:</b>&nbsp;(Easy)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/hpsmore2.png"></th>
@@ -1020,7 +1020,7 @@ $m = \frac{\log 2}{\lambda}$.
 
 </p>
 ::<p>
-<b>EXERCISE 12:</b>&nbsp;<center>
+<b>EXERCISE 12:</b>&nbsp;(Easy)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/hpsmore3.png"></th>
@@ -1048,7 +1048,7 @@ This is actually positive, since $\log 0.9 &lt; 0$.
 
 </p>
 ::<p>
-<b>EXERCISE 13:</b>&nbsp;<center>
+<b>EXERCISE 13:</b>&nbsp;(Easy)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/hpsmore4.png"></th>
@@ -1085,7 +1085,7 @@ Actually here $F(x)$  is continuous at $x=2$.
 
 </p>
 ::<p>
-<b>EXERCISE 14:</b>&nbsp;<center>
+<b>EXERCISE 14:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/hpsmore5.png"></th>
